deployments/actualBudget/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: actualbudget
  labels:
    name: actualbudget
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: actualbudget
  name: actualbudget
  namespace: actualbudget
spec:
  selector:
    matchLabels:
      app: actualbudget
  template:
    metadata:
      labels:
        app: actualbudget
    spec:
      containers:
        - name: actualbudget
          image: actualbudget/actual-server:latest
          ports:
            - name: actualbudget
              containerPort: 5006
          volumeMounts:
            - mountPath: /data
              name: actualbudget-pv
      volumes:
        - name: actualbudget-pv
          persistentVolumeClaim:
            claimName: actualbudget-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: actualbudget
spec:
  selector:
      app: actualbudget
  ports:
    - port: 5006
      protocol: TCP
      targetPort: 5006
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: actualbudget-headers
  namespace: actualbudget
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self'; worker-src 'self' blob:;"
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Forwarded-Host: actualbudget.local.tigovanroy.space

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actualbudget
  namespace: actualbudget
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`www.actualbudget.local.tigovanroy.space`)
      services:
        - name: actualbudget
          port: 5006
      middlewares:
        - name: actualbudget-headers
          namespace: actualbudget
    - kind: Rule
      match: Host(`actualbudget.local.tigovanroy.space`)
      services:
        - name: actualbudget
          port: 5006
      middlewares:
        - name: actualbudget-headers
          namespace: actualbudget
  tls:
    secretName: local-tigovanroy-space-production-tls
